--- a/app/app.css
+++ b/app/app.css
@@ -1,15 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 @import "tailwindcss";
 
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+html, body {
+  @apply bg-[#260303] text-[#F5960B];
+  font-family: "Permanent Marker", cursive;
+  color: #F5960B;
 }
 
-html,
-body {
-  @apply bg-[#4b0505];
+* {
+  color: #F5960B;
+  font-family: "Permanent Marker", cursive;
+}
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
+.permanent-marker-regular {
+  font-weight: 400;
+  font-style: normal;
 }
